    softwarecenter/view/appdetailsview_gtk.py,
    softwarecenter/view/appview.py:
    - implement download and local caching of downloadable
      icons, display them in applist and appdetails views

  [ Michael Vogt ]
  * test/test_database.py:
    - re-enable sca test again
  * test/{test_downloader.py, test_ppa_iconfilename.py}:
    - add tests for the downloader and the iconfilename

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 09 Aug 2010 10:27:20 +0200

software-center (2.1.8) maverick; urgency=low

  [ Michael Vogt ]
  * merged  lp:~mmcg069/software-center/backforward-tweaks,
    many thanks
  * merged  lp:~mmcg069/software-center/appview-tweaks,
    many thanks
  * merged lp:~kiwinote/software-center/getting-the-small-things-right
    and tweaked it a little bit
  * merged lp:~mvo/software-center/buy-something, currently needs to
    be enabled via "--enable-buy" to make it work
  * merged  lp:~and471/software-center/fix-524289 
    LP: #524289, LP: #537532
  * merged lp:~and471/software-center/fix-keypresses-on-viewswitcher,
    many thanks
  * merged lp:~mmcg069/software-center/catview-tweaks, many thanks

  [ Kiwinote ]
  * softwarecenter/app.py:
    - save/restore sidebar width (LP: #567128)
    - don't crash if active_pane doesn't have a searchentry (LP: #611718)
  * softwarecenter/db/application.py:
    - add new "display_name" and "display_summary" - when app has no appname, 
      display the summary as primary text (per spec)
      LP: #537436
  * softwarecenter/view/appdetailsview_gtk.py:
    - use "display_name" and "display_summary" (LP: #537436)
  * softwarecenter/view/availablepane.py:
    - correctly update the status bar after filtering by support status 
      LP: #528062
  * softwarecenter/view/basepane.py:
    - basepane doesn't contain a searchentry

  [ Gary Lasker ]
  * apt-xapian-index-plugin/software-center.py,
    softwarecenter/enums.py,
    softwarecenter/db/update.py:
    - implement a-x-i plugin to index custom metadata